--- a/pages/comfort.html
+++ b/pages/comfort.html
@@ -12,7 +12,7 @@ permalink: /comfort.html
      img {
   width: 600px;
   height: 600px;
-  object-fit: cover;
+  object-fit: contain;
 }
 * {
   box-sizing: border-box;
@@ -52,36 +52,50 @@ permalink: /comfort.html
 </head>
 <body>
 
-<div class="row">
-  <div class="column left" style="background-color:#FFFFFF;">
-    <h4><p><b>Everett Phipps Babcock</b></p></h4>
-    <br>
-    <em>1874-1928</em>
-    <br>
-    <br>
-    <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 PACIFIC AVE, TACOMA">Pacific Savings and Loan</a></p>
-    <br>
-    <p>Everett Phipps Babcock was born in Tacoma and worked primarily with Ambrose James Russell as Russell & Babcock. In addition to the residences listed below, Babcock also built his own residence for his wife Clara on American Lake named "The Totem Pole." Babcock died suddenly after a routine tonsil removal operation in Pasadena, California.</p>
-    <br>
-    <p>Other Work: 
-    <br>
-    <a href="https://cdm16786.contentdm.oclc.org/digital/collection/ayp/id/487">Masonic Building, Alaska Yukon Pacific Exposition, Seattle, 1909</a>
-    <br> 
-    <a href="https://pcad.lib.washington.edu/building/21858/">Perkins Building, Downtown, Tacoma, WA (1906-1907)</a> 
-    <br>
-    <a href="https://www.historylink.org/File/9048">State of Washington, Governor's Mansion, Olympia, WA (1908)</a> </p>
-    <br>
-    <sub>Sources: “Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - May 30, 1908”“Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - July 4, 1908”, “Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - July 24, 1909”, “Los Angeles Times - May 17, 1928 - Page A10,”</sub>
-    <br>
+  <div class="row">
+    <div class="column left" style="background-color:#FFFFFF;">
+      <h4><p><b>Comfort Station for Women</b></p></h4>
+      <br>
+      <em>October 1, 1910</em>
+      <br>
+      <br>
+      <p>Address: <a href="https://aweymo.github.io/losttacoma/browse.html#625%20COMMERCE%20ST%2C%20TACOMA">625 COMMERCE ST, TACOMA</a></p>
+      <br>
+      <p>Three of eight technical drawings for a proposed but unbuilt Comfort Station for Women, created by Wilbur C. Raleigh on October, 1910. The design places the restroom on the south 7th street side of the Old City Hall building, with a small, covered doorway leading underground to the facilities. 
+      <br>  
+      Wilbur C. Raleigh also designed the Shops and Stables building and acted as supervising engineer for the construction of the Murray Morgan and Puyallup River Bridges.</p>
+      <br>
+      </div>
+    <div class="column right" style="background-color:#FFFFFF;">
+      <a href="https://aweymo.github.io/losttacoma/browse.html#625 COMMERCE ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/p_raleigh.png" alt="Wilbur C. Raleigh" style="max-width:100%;"></a>
+      <br>
+      <sub>Wilbur C. Raleigh (not highlighted in cyan) High School Football Photo
+      <br>
+      Tacoma News Tribune, May 5, 1922
+      </sub>
     </div>
-  <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 PACIFIC AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pacific_savings" alt="Pacific Savings and Loan" style="max-width:100%;"></a>
-    <br>
-    <sub>Pacific Savings and Loan, TPL Historic Building Files (BU-11000), 11-04-1928, 
-    <br>
-    Courtesy Northwest Room</sub>
+    <div class="column left" style="background-color:#FFFFFF;">
+      <p>Technical Drawings: 
+      <br>
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt037">Sheet 1</a> 
+      <br> 
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt038">Sheet 4</a> 
+      <br> 
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt039">Sheet 6</a> 
+      <br> 
+      </div>
+    <div class="column right" style="background-color:#FFFFFF;">
+      <a href="https://tacomalibrary.contentdm.oclc.org/digital/collection/p17061coll21/id/12544/rec/1"><img src="losttacoma/objects/b_comfort.jpeg" 
+        alt="The box-shaped structure in the middle of South 10th street (on the left) is the entrance to Tacoma's below-street-level Women Only comfort station." style="max-width:100%;"></a>
+      <br>
+      <sub>Underground comfort station at 10th and Pacific which shares some similarities to the proposed restroom beside City Hall.</sub>
+      <br>
+      <sub>Photo by Marvin D. Boland (BOLAND-B10776), 1924-08-22</sub>
+      <br>
+      <sub>Courtesy Tacoma Public Library Northwest Room</sub>
+      <br>
+    </div>
   </div>
-</div>
   
 </body>
 </html>
