--- a/pages/coolers.html
+++ b/pages/coolers.html
@@ -12,7 +12,7 @@ permalink: /coolers.html
      img {
   width: 600px;
   height: 600px;
-  object-fit: cover;
+  object-fit: contain;
 }
 * {
   box-sizing: border-box;
@@ -52,36 +52,45 @@ permalink: /coolers.html
 </head>
 <body>
 
-<div class="row">
-  <div class="column left" style="background-color:#FFFFFF;">
-    <h4><p><b>Everett Phipps Babcock</b></p></h4>
+  <div class="row">
+    <div class="column left" style="background-color:#FFFFFF;">
+      <h4><p><b>Carsten Packing Company Coolers and Shipping Office</b></p></h4>
+      <br>
+      <em>January 1, 1922</em>
+      <br>
+      <br>
+      <p>Address: <a href="https://aweymo.github.io/losttacoma/browse.html#1623%20E%20J%20ST%2C%20TACOMA">1623 E J ST, TACOMA</a></p>
+      <br>
+      <p>One of 16 available technical drawings created for the Carsten Packing Company, created by P.V. Cornils, the company's in-house architect, circa 1922.</p>
+      <br>
+      </div>
+    <div class="column right" style="background-color:#FFFFFF;">
+      <a href="https://aweymo.github.io/losttacoma/browse.html#Henschien%20Everds%20%26%20Crombie"><img src="https://aweymo.github.io/losttacoma/objects/ ext_carstens" alt="Carstens Packing Company" style="max-width:100%"></a>
     <br>
-    <em>1874-1928</em>
-    <br>
-    <br>
-    <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 PACIFIC AVE, TACOMA">Pacific Savings and Loan</a></p>
-    <br>
-    <p>Everett Phipps Babcock was born in Tacoma and worked primarily with Ambrose James Russell as Russell & Babcock. In addition to the residences listed below, Babcock also built his own residence for his wife Clara on American Lake named "The Totem Pole." Babcock died suddenly after a routine tonsil removal operation in Pasadena, California.</p>
-    <br>
-    <p>Other Work: 
-    <br>
-    <a href="https://cdm16786.contentdm.oclc.org/digital/collection/ayp/id/487">Masonic Building, Alaska Yukon Pacific Exposition, Seattle, 1909</a>
+    <sub>Carsten Packing Company, TPL Cultural Resource Survey (BU-10009), 1977</sub>
     <br> 
-    <a href="https://pcad.lib.washington.edu/building/21858/">Perkins Building, Downtown, Tacoma, WA (1906-1907)</a> 
-    <br>
-    <a href="https://www.historylink.org/File/9048">State of Washington, Governor's Mansion, Olympia, WA (1908)</a> </p>
-    <br>
-    <sub>Sources: “Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - May 30, 1908”“Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - July 4, 1908”, “Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - July 24, 1909”, “Los Angeles Times - May 17, 1928 - Page A10,”</sub>
+    <sub>Courtesy Tacoma Public Library Northwest Room</sub>
     <br>
     </div>
-  <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 PACIFIC AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pacific_savings" alt="Pacific Savings and Loan" style="max-width:100%;"></a>
-    <br>
-    <sub>Pacific Savings and Loan, TPL Historic Building Files (BU-11000), 11-04-1928, 
-    <br>
-    Courtesy Northwest Room</sub>
+    <div class="column left" style="background-color:#FFFFFF;">
+      <p>Technical Drawings: 
+      <br>
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt027">Sheet 9</a> 
+      <br> 
+      </div>
+    <div class="column right" style="background-color:#FFFFFF;">
+      <a href="https://aweymo.github.io/losttacoma/browse.html#Henschien%20Everds%20%26%20Crombie"><img src="https://aweymo.github.io/losttacoma/objects/b_carstens.jpeg" 
+      alt="Golden Jubilee Parade, Carsten's Packing Company float, on July 22, 1939. Man is holding huge carving knife in front of a model of large ham; little girls are sitting on float. Old Chamber of Commerce Building on Pacific Avenue in background." 
+      style="max-width:100%;"></a>
+      <br>
+      <sub>Golden Jubilee Parade, Carsten's Packing Company float</sub>
+      <br>
+      <sub>Photo by Richards Studio (D8652-33), 1939-07-22</sub>
+      <br>
+      <sub>Courtesy Tacoma Public Library Northwest Room</sub>
+      <br>
+    </div>
   </div>
-</div>
   
 </body>
 </html>
