--- a/pages/apartment.html
+++ b/pages/apartment.html
@@ -67,6 +67,8 @@ permalink: /apartment.html
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/search/index.html?q=ekvall"><img src="https://aweymo.github.io/losttacoma/objects/p_buffelen.jpeg" alt="John Buffelen" style="max-width:100%;"></a>
     <br>
+    <sub>John Buffelen</sub>
+    <br>
     <sub>The Tacoma News Tribune - July 10, 1930 - Page 1. p. 1.</sub>
     <br>
   </div>
@@ -87,6 +89,8 @@ permalink: /apartment.html
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/search/index.html?q=ekvall"><img src="https://aweymo.github.io/losttacoma/objects/p_ekvall.jpeg" alt="George L. Ekvall" style="max-width:100%;"></a>
+    <br>
+    <sub>George Ekvall</sub>
     <br>
     <sub>Courtesy Washington State Department of Architectural Licensing</sub>
     <br>
