--- a/pages/albertson.html
+++ b/pages/albertson.html
@@ -83,7 +83,7 @@ permalink: /albertson.html
   <div class="column left" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_crystal_palace_02" alt="Crystal Palace Public Market" style="max-width:100%;"></a>
     <br>
-    <sub>Crystal Palace Public Market, TPL Historic Building Files (BU-10009), 
+    <sub>Crystal Palace Public Market, TPL Historic Building Files (BU-10009)
     <br> 
     Courtesy Northwest Room</sub>
     <br>
@@ -91,7 +91,7 @@ permalink: /albertson.html
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_crystal_palace_01" alt="Crystal Palace Public Market" style="max-width:100%;"></a>
     <br>
-    <sub>Crystal Palace Public Market, TPL Historic Building Files (BU-12230), 
+    <sub>Crystal Palace Public Market, TPL Historic Building Files (BU-12230)
     <br>  
     Courtesy Northwest Room</sub>
   </div>
