--- a/pages/comfort.html
+++ b/pages/comfort.html
@@ -85,10 +85,10 @@ permalink: /comfort.html
       <br> 
       </div>
     <div class="column right" style="background-color:#FFFFFF;">
-      <a href="https://tacomalibrary.contentdm.oclc.org/digital/collection/p17061coll21/id/12544/rec/1"><img src="losttacoma/objects/b_comfort.jpeg" 
+      <a href="https://tacomalibrary.contentdm.oclc.org/digital/collection/p17061coll21/id/12544/rec/1"><img src="https://aweymo.github.io/losttacoma/objects/b_comfort.jpeg" 
         alt="The box-shaped structure in the middle of South 10th street (on the left) is the entrance to Tacoma's below-street-level Women Only comfort station." style="max-width:100%;"></a>
       <br>
-      <sub>Underground comfort station at 10th and Pacific which shares some similarities to the proposed restroom beside City Hall.</sub>
+      <sub>Detail of underground comfort station at 10th and Pacific which shares some similarities to the proposed restroom beside City Hall.</sub>
       <br>
       <sub>Photo by Marvin D. Boland (BOLAND-B10776), 1924-08-22</sub>
       <br>
