--- a/pages/arlington.html
+++ b/pages/arlington.html
@@ -71,7 +71,9 @@ permalink: /arlington.html
     <div class="column right" style="background-color:#FFFFFF;">
       <a href="https://aweymo.github.io/losttacoma/item.html?id=lt005"><img src="https://aweymo.github.io/losttacoma/objects/ ext_arlington" alt="Arlington Elementary School Addition" style="max-width:100%;"></a>
       <br>
-      <sub>Arlington Elementary School Addition, TPL Historic Building Files (BU-11303), 12-11-1926
+      <sub>Arlington Elementary School Addition
+      <br> 
+      TPL Historic Building Files (BU-11303), 12-11-1926
       <br>  
       Courtesy Northwest Room</sub>
       <br> 
