--- a/pages/coolers.html
+++ b/pages/coolers.html
@@ -71,7 +71,9 @@ permalink: /coolers.html
     <div class="column right" style="background-color:#FFFFFF;">
       <a href="https://aweymo.github.io/losttacoma/browse.html#Henschien%20Everds%20%26%20Crombie"><img src="https://aweymo.github.io/losttacoma/objects/ ext_carstens" alt="Carstens Packing Company" style="max-width:100%"></a>
     <br>
-    <sub>Carsten Packing Company, TPL Cultural Resource Survey (BU-10009), 1977</sub>
+    <sub>Carsten Packing Company
+    <br>   
+    TPL Cultural Resource Survey (BU-10009), 1977</sub>
     <br> 
     <sub>Courtesy Tacoma Public Library Northwest Room</sub>
     <br>
