--- a/pages/defiance.html
+++ b/pages/defiance.html
@@ -12,7 +12,7 @@ permalink: /defiance.html
      img {
   width: 600px;
   height: 600px;
-  object-fit: cover;
+  object-fit: contain;
 }
 * {
   box-sizing: border-box;
@@ -52,36 +52,93 @@ permalink: /defiance.html
 </head>
 <body>
 
-<div class="row">
-  <div class="column left" style="background-color:#FFFFFF;">
-    <h4><p><b>Everett Phipps Babcock</b></p></h4>
+  <div class="row">
+    <div class="column left" style="background-color:#FFFFFF;">
+      <h4><p><b>Point Defiance Pavilion</b></p></h4>
+      <br>
+      <em>May 6, 1919- March 22, 1925</em>
+      <br>
+      <br>
+      <p>Address: <a href="https://aweymo.github.io/losttacoma/browse.html#5912%20N%20WATERFRONT%20DR.%20TACOMA">5912 N WATERFRONT DR. TACOMA</a></p>
+      <br>
+      <p>Twenty three technical drawings for the Point Defiance Pavilion, created by A.J. Russell and Earl N. Dugan submitted in a series of "units" over 5/6/1919, 2/22/1921 and 3/22/1925. 
+      <br>  
+      While the name Point Defiance Pavilion sometimes refers to the octagonal structure on what is now the Point Defiance Marina, these plans refer to the structure closer to the water which often took the same name. 
+      <br>
+      According to Edwin D. Ferris' original designs, this structure was originally a bathhouse, then became a restaurant and finally converted to an aquarium before the building was destroyed by a fire in 1972.</p>
+      <br>
+      </div>
+    <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/browse.html#5912 N WATERFRONT DR. TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pavilion_02" alt="Point Defiance Pavilion" style="max-width:100%;"></a>
     <br>
-    <em>1874-1928</em>
-    <br>
-    <br>
-    <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 PACIFIC AVE, TACOMA">Pacific Savings and Loan</a></p>
-    <br>
-    <p>Everett Phipps Babcock was born in Tacoma and worked primarily with Ambrose James Russell as Russell & Babcock. In addition to the residences listed below, Babcock also built his own residence for his wife Clara on American Lake named "The Totem Pole." Babcock died suddenly after a routine tonsil removal operation in Pasadena, California.</p>
-    <br>
-    <p>Other Work: 
-    <br>
-    <a href="https://cdm16786.contentdm.oclc.org/digital/collection/ayp/id/487">Masonic Building, Alaska Yukon Pacific Exposition, Seattle, 1909</a>
+    <sub>Point Defiance Pavilion
     <br> 
-    <a href="https://pcad.lib.washington.edu/building/21858/">Perkins Building, Downtown, Tacoma, WA (1906-1907)</a> 
-    <br>
-    <a href="https://www.historylink.org/File/9048">State of Washington, Governor's Mansion, Olympia, WA (1908)</a> </p>
-    <br>
-    <sub>Sources: “Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - May 30, 1908”“Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - July 4, 1908”, “Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - July 24, 1909”, “Los Angeles Times - May 17, 1928 - Page A10,”</sub>
-    <br>
-    </div>
-  <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 PACIFIC AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pacific_savings" alt="Pacific Savings and Loan" style="max-width:100%;"></a>
-    <br>
-    <sub>Pacific Savings and Loan, TPL Historic Building Files (BU-11000), 11-04-1928, 
+    Richards Studio (D34612-73), ca. 1934
     <br>
     Courtesy Northwest Room</sub>
+    </div>
+    <div class="column left" style="background-color:#FFFFFF;">
+      <p>Technical Drawings: 
+      <br>
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt076">First Unit, Sheet 1</a> 
+      <br> 
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt077">First Unit, Sheet 2</a> 
+      <br> 
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt078">First Unit, Sheet 3</a> 
+      <br> 
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt079">First Unit, Sheet 4</a> 
+      <br> 
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt080">First Unit, Sheet 5</a> 
+      <br> 
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt081">First Unit, Sheet 6</a> 
+      <br>
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt082">First Unit, Sheet 7</a> 
+      <br>
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt083">Second Unit, Sheet 1</a> 
+      <br>
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt084">Second Unit, Sheet 2</a> 
+      <br> 
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt085">Second Unit, Sheet 4</a> 
+      <br> 
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt086">Second Unit, Sheet 5</a> 
+      <br> 
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt087">Third Unit, Sheet 1</a> 
+      <br> 
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt088">Third Unit, Sheet 2</a> 
+      <br> 
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt089">Third Unit, Sheet 3</a> 
+      <br>
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt090">Third Unit, Sheet 4</a> 
+      <br>
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt091">Third Unit, Sheet 5</a> 
+      <br>
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt092">Third Unit, Sheet 11</a> 
+      <br> 
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt093">Third Unit, Sheet 21</a> 
+      <br> 
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt094">Third Unit, Sheet 31</a> 
+      <br> 
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt095">Third Unit, Sheet 32</a> 
+      <br> 
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt096">Third Unit, Sheet 33</a> 
+      <br> 
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt097">Third Unit, Sheet 34</a> 
+      <br>
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt098">Third Unit, Sheet 41</a> 
+      <br>
+      </p>
+      <br>
+      </div>
+    <div class="column right" style="background-color:#FFFFFF;">
+      <a href="https://aweymo.github.io/losttacoma/browse.html#5912 N WATERFRONT DR. TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pavilion_01" alt="Point Defiance Pavilion" style="max-width:100%;"></a>
+    <br>
+    <sub>Point Defiance Pavilion 
+    <br>  
+    Richards Studio (D7207-6), 04-24-1938 
+    <br>
+    Courtesy Northwest Room</sub>
+    </div>
   </div>
-</div>
   
 </body>
 </html>
