--- a/pages/dugan.html
+++ b/pages/dugan.html
@@ -97,7 +97,9 @@ permalink: /dugan.html
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#1009-15 A ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_lawrence" alt="Lawrence Block Remodel" style="max-width:100%;"></a>
     <br>
-    <sub>Lawrence Block Remodel, TPL Historic Building Files (BU-12730), c.a. 1934
+    <sub>Lawrence Block Remodel
+    <br>
+    TPL Historic Building Files (BU-12730), c.a. 1934
     <br>
     Courtesy Northwest Room</sub>
   </div>
@@ -107,14 +109,18 @@ permalink: /dugan.html
   <div class="column left" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#5912 N WATERFRONT DR. TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pavilion_02" alt="Point Defiance Pavilion" style="max-width:100%;"></a>
     <br>
-    <sub>Point Defiance Pavilion, Richards Studio (D34612-73), ca. 1934, 
+    <sub>Point Defiance Pavilion
+    <br>  
+    Richards Studio (D34612-73), ca. 1934 
     <br>
     Courtesy Northwest Room</sub>
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#5912 N WATERFRONT DR. TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pavilion_01" alt="Point Defiance Pavilion" style="max-width:100%;"></a>
     <br>
-    <sub>Point Defiance Pavilion, Richards Studio (D7207-6), 04-24-1938, 
+    <sub>Point Defiance Pavilion
+    <br>
+    Richards Studio (D7207-6), 04-24-1938 
     <br>
     Courtesy Northwest Room</sub>
   </div>
@@ -124,16 +130,20 @@ permalink: /dugan.html
   <div class="column left" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#742-50 PACIFIC AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_donnelly" alt="Donnelly Site Hotel" style="max-width:100%;"></a>
     <br>
-    <sub>Donnelly Hotel Site, TPL Historic Building Files (BU-11892), 1938-04-24, 
+    <sub>Donnelly Hotel Site
+    <br>
+    TPL Historic Building Files (BU-11892), 1938-04-24
     <br>
     Courtesy Northwest Room</sub>
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt118"><img src="https://aweymo.github.io/losttacoma/objects/ ext_washington" alt="Washington Hardware Company Remodel" style="max-width:100%;"></a>
     <br>
-    <sub>Washington Hardware Company Remodel, TPL Historic Building Files (BU-10989), 
+    <sub>Washington Hardware Company Remodel
     <br>
-      Courtesy Northwest Room</sub>
+    TPL Historic Building Files (BU-10989)
+    <br>
+    Courtesy Northwest Room</sub>
   </div>
 </div>
   
