--- a/pages/abattoir.html
+++ b/pages/abattoir.html
@@ -56,8 +56,9 @@ permalink: /abattoir.html
     <div class="column left" style="background-color:#FFFFFF;">
       <h4><p><b>Carsten Packing Company Abattoir</b></p></h4>
       <br>
-      <em>June 10, 1939</em>
+      <p>Status: Demolished</p>
       <br>
+      <em>June 10, 1939</em>
       <br>
       <p>Address: <a href="https://aweymo.github.io/losttacoma/browse.html#1623%20E%20J%20ST%2C%20TACOMA">1623 E J ST, TACOMA</a></p>
       <br>
