--- a/pages/arlington.html
+++ b/pages/arlington.html
@@ -56,6 +56,8 @@ permalink: /arlington.html
     <div class="column left" style="background-color:#FFFFFF;">
       <h4><p><b>Arlington Elementary School Addition</b></p></h4>
       <br>
+    <p>Status: Unbuilt</p>
+    <br>
       <em>April 18, 1924</em>
       <br>
       <br>
