--- a/pages/apartment.html
+++ b/pages/apartment.html
@@ -56,6 +56,8 @@ permalink: /apartment.html
   <div class="column left" style="background-color:#FFFFFF;">
     <h4><p><b>Apartment Building for John Buffelen</b></p></h4>
     <br>
+    <p>Status: Unbuilt</p>
+    <br>
     <em>April 30, 1931</em>
     <br>
     <br>
