--- a/pages/ch.html
+++ b/pages/ch.html
@@ -56,6 +56,8 @@ permalink: /ch.html
     <div class="column left" style="background-color:#FFFFFF;">
       <h4><p><b>City Hall - Proposed</b></p></h4>
       <br>
+      <p>Status: Unbuilt</p> 
+      <br>
       <em>February 1, 1937</em>
       <br>
       <br>
