--- a/pages/comfort.html
+++ b/pages/comfort.html
@@ -56,6 +56,8 @@ permalink: /comfort.html
     <div class="column left" style="background-color:#FFFFFF;">
       <h4><p><b>Comfort Station for Women</b></p></h4>
       <br>
+      <p>Status: Unbuilt</p>
+      <br>
       <em>October 1, 1910</em>
       <br>
       <br>
