--- a/pages/coolers.html
+++ b/pages/coolers.html
@@ -56,6 +56,8 @@ permalink: /coolers.html
     <div class="column left" style="background-color:#FFFFFF;">
       <h4><p><b>Carsten Packing Company Coolers and Shipping Office</b></p></h4>
       <br>
+      <p>Status: Destroyed</p>
+      <br>
       <em>January 1, 1922</em>
       <br>
       <br>
