--- a/pages/crystal.html
+++ b/pages/crystal.html
@@ -56,6 +56,8 @@ permalink: /crystal.html
     <div class="column left" style="background-color:#FFFFFF;">
       <h4><p><b>Crystal Palace Public Market</b></p></h4>
       <br>
+      <p>Status: Destroyed</p>
+      <br>
       <em>December 27, 1926</em>
       <br>
       <br>
