--- a/pages/mallis.html
+++ b/pages/mallis.html
@@ -75,7 +75,9 @@ permalink: /mallis.html
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt049"><img src="https://aweymo.github.io/losttacoma/objects/ ext_dupont" alt="Dupont School Building Addition" style="max-width:100%;object-fit: contain;"></a>
     <br>
-    <sub>Dupont School Building, Richards Studio (D85513-2), 10-01-1954
+    <sub>Dupont School Building 
+    <br> 
+    Richards Studio (D85513-2), 10-01-1954
     <br>  
     Courtesy Northwest Room</sub>
   </div>
