--- a/pages/dupont.html
+++ b/pages/dupont.html
@@ -12,7 +12,7 @@ permalink: /dupont.html
      img {
   width: 600px;
   height: 600px;
-  object-fit: cover;
+  object-fit: contain;
 }
 * {
   box-sizing: border-box;
@@ -52,36 +52,37 @@ permalink: /dupont.html
 </head>
 <body>
 
-<div class="row">
-  <div class="column left" style="background-color:#FFFFFF;">
-    <h4><p><b>Everett Phipps Babcock</b></p></h4>
-    <br>
-    <em>1874-1928</em>
-    <br>
-    <br>
-    <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 PACIFIC AVE, TACOMA">Pacific Savings and Loan</a></p>
-    <br>
-    <p>Everett Phipps Babcock was born in Tacoma and worked primarily with Ambrose James Russell as Russell & Babcock. In addition to the residences listed below, Babcock also built his own residence for his wife Clara on American Lake named "The Totem Pole." Babcock died suddenly after a routine tonsil removal operation in Pasadena, California.</p>
-    <br>
-    <p>Other Work: 
-    <br>
-    <a href="https://cdm16786.contentdm.oclc.org/digital/collection/ayp/id/487">Masonic Building, Alaska Yukon Pacific Exposition, Seattle, 1909</a>
-    <br> 
-    <a href="https://pcad.lib.washington.edu/building/21858/">Perkins Building, Downtown, Tacoma, WA (1906-1907)</a> 
-    <br>
-    <a href="https://www.historylink.org/File/9048">State of Washington, Governor's Mansion, Olympia, WA (1908)</a> </p>
-    <br>
-    <sub>Sources: “Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - May 30, 1908”“Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - July 4, 1908”, “Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - July 24, 1909”, “Los Angeles Times - May 17, 1928 - Page A10,”</sub>
-    <br>
+  <div class="row">
+    <div class="column left" style="background-color:#FFFFFF;">
+      <h4><p><b>Dupont School Building Addition</b></p></h4>
+      <br>
+      <p>Status: Demolished</p>
+      <br>
+      <em>September 8, 1941</em>
+      <br>
+      <br>
+      <p>Address: <a href="https://aweymo.github.io/losttacoma/browse.html#1%20BARKSDALE%20AVE%2C%20DUPONT">1 BARKSDALE AVE, DUPONT</a></p>
+      <br>
+      <p>One of 32 technical drawings created for the Dupont School Building Addition, created by William Mallis on September 8, 1941. 
+      <br> 
+      The addition was built in 1943 before the school was turned into the Laughbon High School, closed due to school boundary disputes. Finally, the structure was converted into a theater before being destroyed by fire in 1969.</p>
+      <br>
+      <p>Technical Drawings: 
+        <br>
+        <a href="https://aweymo.github.io/losttacoma/item.html?id=lt049">Sheet 14</a> 
+        <br>
+        </p>
+      </div>
+    <div class="column right" style="background-color:#FFFFFF;">
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt049"><img src="https://aweymo.github.io/losttacoma/objects/ ext_dupont" alt="Dupont School Building Addition" style="max-width:100%;object-fit: contain;"></a>
+      <br>
+      <sub>Dupont School Building 
+      <br> 
+      Richards Studio (D85513-2), 10-01-1954
+      <br>  
+      Courtesy Northwest Room</sub>
     </div>
-  <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 PACIFIC AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pacific_savings" alt="Pacific Savings and Loan" style="max-width:100%;"></a>
-    <br>
-    <sub>Pacific Savings and Loan, TPL Historic Building Files (BU-11000), 11-04-1928, 
-    <br>
-    Courtesy Northwest Room</sub>
   </div>
-</div>
   
 </body>
 </html>
