--- a/pages/comfort.html
+++ b/pages/comfort.html
@@ -80,7 +80,7 @@ permalink: /comfort.html
       <a href="https://tacomalibrary.contentdm.oclc.org/digital/collection/p17061coll21/id/12544/rec/1"><img src="https://aweymo.github.io/losttacoma/objects/b_comfort.jpeg" 
         alt="The box-shaped structure in the middle of South 10th street (on the left) is the entrance to Tacoma's below-street-level Women Only comfort station." style="max-width:100%;"></a>
       <br>
-      <sub>Detail of underground comfort station at 10th and Pacific which shares some similarities in design.</sub>
+      <sub>Detail of underground comfort station at 10th and Pacific which shares some similarities in design</sub>
       <br>
       <sub>Photo by Marvin D. Boland (BOLAND-B10776), 1924-08-22</sub>
       <br>
