--- a/pages/crystal.html
+++ b/pages/crystal.html
@@ -78,26 +78,6 @@ permalink: /crystal.html
     <br>  
     Courtesy Tacoma Public Library Northwest Room</sub>
     </div>
-    <div class="column right" style="background-color:#FFFFFF;">
-      <p>Technical Drawings: 
-      <br>
-      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt040">Sheet 1</a> 
-      <br>
-      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt041">Sheet 2</a> 
-      <br>
-      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt042">Sheet 3</a> 
-      <br>
-      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt043">Sheet 4</a> 
-      <br>
-      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt044">Sheet 5</a> 
-      <br>
-      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt045">Sheet 6</a> 
-      <br>
-      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt046">Sheet 7</a> 
-      <br>
-      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt047">Sheet 8</a> 
-      <br> 
-      </div>
     <div class="column left" style="background-color:#FFFFFF;">
       <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_crystal_palace_02" alt="Crystal Palace Public Market" style="max-width:100%;"></a>
       <br>
@@ -107,6 +87,27 @@ permalink: /crystal.html
       <br> 
       Courtesy Tacoma Public Library Northwest Room</sub>
       <br>
+      </div>
+    <div class="column right" style="background-color:#FFFFFF;">
+      <p>Technical Drawings: 
+        <br>
+        <a href="https://aweymo.github.io/losttacoma/item.html?id=lt040">Sheet 1</a> 
+        <br>
+        <a href="https://aweymo.github.io/losttacoma/item.html?id=lt041">Sheet 2</a> 
+        <br>
+        <a href="https://aweymo.github.io/losttacoma/item.html?id=lt042">Sheet 3</a> 
+        <br>
+        <a href="https://aweymo.github.io/losttacoma/item.html?id=lt043">Sheet 4</a> 
+        <br>
+        <a href="https://aweymo.github.io/losttacoma/item.html?id=lt044">Sheet 5</a> 
+        <br>
+        <a href="https://aweymo.github.io/losttacoma/item.html?id=lt045">Sheet 6</a> 
+        <br>
+        <a href="https://aweymo.github.io/losttacoma/item.html?id=lt046">Sheet 7</a> 
+        <br>
+        <a href="https://aweymo.github.io/losttacoma/item.html?id=lt047">Sheet 8</a> 
+        <br> 
+        <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_crystal_palace_02" alt="Crystal Palace Public Market" style="max-width:100%;"></a>
   </div>
     </div>
   </div>
