--- a/pages/defiance.html
+++ b/pages/defiance.html
@@ -56,7 +56,7 @@ permalink: /defiance.html
     <div class="column left" style="background-color:#FFFFFF;">
       <h4><p><b>Point Defiance Pavilion</b></p></h4>
       <br>
-      <p>Status: Unbuilt</p>
+      <p>Status: Demolished</p>
       <br>
       <em>May 6, 1919- March 22, 1925</em>
       <br>
