--- a/pages/edison.html
+++ b/pages/edison.html
@@ -12,7 +12,7 @@ permalink: /edison.html
      img {
   width: 600px;
   height: 600px;
-  object-fit: cover;
+  object-fit: contain;
 }
 * {
   box-sizing: border-box;
@@ -52,36 +52,50 @@ permalink: /edison.html
 </head>
 <body>
 
-<div class="row">
-  <div class="column left" style="background-color:#FFFFFF;">
-    <h4><p><b>Everett Phipps Babcock</b></p></h4>
-    <br>
-    <em>1874-1928</em>
-    <br>
-    <br>
-    <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 PACIFIC AVE, TACOMA">Pacific Savings and Loan</a></p>
-    <br>
-    <p>Everett Phipps Babcock was born in Tacoma and worked primarily with Ambrose James Russell as Russell & Babcock. In addition to the residences listed below, Babcock also built his own residence for his wife Clara on American Lake named "The Totem Pole." Babcock died suddenly after a routine tonsil removal operation in Pasadena, California.</p>
-    <br>
-    <p>Other Work: 
-    <br>
-    <a href="https://cdm16786.contentdm.oclc.org/digital/collection/ayp/id/487">Masonic Building, Alaska Yukon Pacific Exposition, Seattle, 1909</a>
-    <br> 
-    <a href="https://pcad.lib.washington.edu/building/21858/">Perkins Building, Downtown, Tacoma, WA (1906-1907)</a> 
-    <br>
-    <a href="https://www.historylink.org/File/9048">State of Washington, Governor's Mansion, Olympia, WA (1908)</a> </p>
-    <br>
-    <sub>Sources: “Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - May 30, 1908”“Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - July 4, 1908”, “Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - July 24, 1909”, “Los Angeles Times - May 17, 1928 - Page A10,”</sub>
-    <br>
+  <div class="row">
+    <div class="column left" style="background-color:#FFFFFF;">
+      <h4><p><b>Edison School Annex</b></p></h4>
+      <br>
+      <p>Status: Demolished</p>
+      <br>
+      <em>May 28, 1910</em>
+      <br>
+      <p>Address: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt050">3102 S 59TH ST, TACOMA</a></p>
+      <br>
+      <p>One of 14 technical drawings for the Edison School Annex, created by Frederick Henry Heath on March 28, 1910. 
+      <br> 
+      Renamed in 1912 to the Barlow Annex after South Tacoma community activist Orin Watts Barlow. The structure was demolished in 2011.</p>
+      <br>
+      </div>
+    <div class="column right" style="background-color:#FFFFFF;">
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt050"><img src="https://aweymo.github.io/losttacoma/objects/ ext_edison" alt="Edison School Annex" style="max-width:100%;"></a>
+      <br>
+      <sub>Edison School
+      <br>
+      TPL Historic Building Files (BU-12230)
+      <br>  
+      Courtesy Northwest Room</sub>
     </div>
-  <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 PACIFIC AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pacific_savings" alt="Pacific Savings and Loan" style="max-width:100%;"></a>
-    <br>
-    <sub>Pacific Savings and Loan, TPL Historic Building Files (BU-11000), 11-04-1928, 
-    <br>
-    Courtesy Northwest Room</sub>
+    <div class="column left" style="background-color:#FFFFFF;">
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt050"><img src="https://aweymo.github.io/losttacoma/objects/b_barlow.jpeg" alt="Orin Watts Barlow" style="max-width:100%;"></a>
+      <br>
+      <sub>Orin Watts Barlow
+      <br>   
+      Men of the Pacific Coast, Containing Portraits and Biographies of the Professional,
+      <br>  
+      Financial and Business Men of California, Oregon and Washington. 1902-1903.
+      <br> 
+      San Francisco, Pacific Art Co., 1903.</sub>
+      <br>
+      </div>
+    <div class="column right" style="background-color:#FFFFFF;">
+      <p>Technical Drawings: 
+        <br>
+        <a href="https://aweymo.github.io/losttacoma/item.html?id=lt050">Sheet 11</a> 
+        <br>
   </div>
-</div>
+    </div>
+  </div>
   
 </body>
 </html>
