--- a/pages/heath.html
+++ b/pages/heath.html
@@ -87,7 +87,9 @@ permalink: /heath.html
   <div class="column left" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt053"><img src="https://aweymo.github.io/losttacoma/objects/ ext_hawthorne" alt="Hawthorne School" style="max-width:100%;"></a>
     <br>
-    <sub>Hawthorne School, TPL Historic Building Files (BU-10009), 
+    <sub>Hawthorne School
+      <br>  
+    TPL Historic Building Files (BU-10009)
     <br>  
     Courtesy Northwest Room</sub>
     <br>
@@ -95,7 +97,9 @@ permalink: /heath.html
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt050"><img src="https://aweymo.github.io/losttacoma/objects/ ext_edison" alt="Edison School Annex" style="max-width:100%;"></a>
     <br>
-    <sub>Edison School, TPL Historic Building Files (BU-12230), 
+    <sub>Edison School
+    <br>
+    TPL Historic Building Files (BU-12230)
     <br>  
     Courtesy Northwest Room</sub>
   </div>
