--- a/pages/rowlands.html
+++ b/pages/rowlands.html
@@ -66,7 +66,9 @@ permalink: /rowlands.html
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt051"><img src="https://aweymo.github.io/losttacoma/objects/ ext_fireboat" alt="Fireboat for the City of Tacoma" style="max-width:100%;"></a>
     <br>
-    <sub>Fireboat for the City of Tacoma, TPL Historic Building Files (BU-14839), c.a. 1981
+    <sub>Fireboat for the City of Tacoma
+    <br>
+    TPL Historic Building Files (BU-14839), c.a. 1981
     <br>  
     Courtesy Northwest Room</sub>
   </div>
