--- a/pages/flickinger.html
+++ b/pages/flickinger.html
@@ -74,7 +74,9 @@ permalink: /flickinger.html
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt052"><img src="https://aweymo.github.io/losttacoma/objects/ ext_garage" alt="Garage for Jail and Public Safety Building" style="max-width:100%;"></a>
     <br>
-    <sub>Garage for Jail and Public Safety Building, TPL Historic Building Files (BU-12819), 10-02-1930, 
+    <sub>Garage for Jail and Public Safety Building
+    <br> 
+    TPL Historic Building Files (BU-12819), 10-02-1930
     <br>
     Courtesy Northwest Room</sub>
   </div>
