--- a/pages/garage.html
+++ b/pages/garage.html
@@ -12,7 +12,7 @@ permalink: /garage.html
      img {
   width: 600px;
   height: 600px;
-  object-fit: cover;
+  object-fit: contain;
 }
 * {
   box-sizing: border-box;
@@ -52,36 +52,35 @@ permalink: /garage.html
 </head>
 <body>
 
-<div class="row">
-  <div class="column left" style="background-color:#FFFFFF;">
-    <h4><p><b>Everett Phipps Babcock</b></p></h4>
+  <div class="row">
+    <div class="column left" style="background-color:#FFFFFF;">
+      <h4><p><b>Garage for Jail and Public Safety Building</b></p></h4>
+      <br>
+      <p>Status: Demolished</p>
+      <br>
+      <em>June 1, 1929</em>
+      <br>
+      <br>
+      <p>Address: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt052">621 PACIFIC AVE, TACOMA</a></p>
+      <br>
+      <p>One of 10 technical drawings created by Harry E. Flickinger on July 1929 for the City of Tacoma. The jail was an addition to the south wing of the City Hall Annex. The structure was eventually demolished in April 1974.</p>
+      <br>
+      <p>Technical Drawings: 
+        <br>
+        <a href="https://aweymo.github.io/losttacoma/item.html?id=lt052">Sheet 4</a> 
+        <br>
+        </p>
+      </div>
+    <div class="column right" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt052"><img src="https://aweymo.github.io/losttacoma/objects/ ext_garage" alt="Garage for Jail and Public Safety Building" style="max-width:100%;"></a>
     <br>
-    <em>1874-1928</em>
-    <br>
-    <br>
-    <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 PACIFIC AVE, TACOMA">Pacific Savings and Loan</a></p>
-    <br>
-    <p>Everett Phipps Babcock was born in Tacoma and worked primarily with Ambrose James Russell as Russell & Babcock. In addition to the residences listed below, Babcock also built his own residence for his wife Clara on American Lake named "The Totem Pole." Babcock died suddenly after a routine tonsil removal operation in Pasadena, California.</p>
-    <br>
-    <p>Other Work: 
-    <br>
-    <a href="https://cdm16786.contentdm.oclc.org/digital/collection/ayp/id/487">Masonic Building, Alaska Yukon Pacific Exposition, Seattle, 1909</a>
+    <sub>Garage for Jail and Public Safety Building
     <br> 
-    <a href="https://pcad.lib.washington.edu/building/21858/">Perkins Building, Downtown, Tacoma, WA (1906-1907)</a> 
-    <br>
-    <a href="https://www.historylink.org/File/9048">State of Washington, Governor's Mansion, Olympia, WA (1908)</a> </p>
-    <br>
-    <sub>Sources: “Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - May 30, 1908”“Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - July 4, 1908”, “Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - July 24, 1909”, “Los Angeles Times - May 17, 1928 - Page A10,”</sub>
-    <br>
-    </div>
-  <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 PACIFIC AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pacific_savings" alt="Pacific Savings and Loan" style="max-width:100%;"></a>
-    <br>
-    <sub>Pacific Savings and Loan, TPL Historic Building Files (BU-11000), 11-04-1928, 
+    TPL Historic Building Files (BU-12819), 10-02-1930
     <br>
     Courtesy Northwest Room</sub>
+    </div>
   </div>
-</div>
   
 </body>
 </html>
