--- a/pages/apartment.html
+++ b/pages/apartment.html
@@ -56,7 +56,7 @@ permalink: /apartment.html
   <div class="column left" style="background-color:#FFFFFF;">
     <h4><p><b>Apartment Building for John Buffelen</b></p></h4>
     <br>
-    <p>Status: Unbuilt</p>
+    <p>Status: <st>Unbuilt</st></p>
     <br>
     <em>April 30, 1931</em>
     <br>
