--- a/pages/apartment.html
+++ b/pages/apartment.html
@@ -56,9 +56,9 @@ permalink: /apartment.html
   <div class="column left" style="background-color:#FFFFFF;">
     <h4><p><b>Apartment Building for John Buffelen</b></p></h4>
     <br>
-    <p>Status: <st>Unbuilt</st></p>
+    <p><strong>Status: Unbuilt</strong></p>
     <br>
-    <em>April 30, 1931</em>
+    <p>April 30, 1931</p>
     <br>
     <br>
     <p>Address: <a href="https://aweymo.github.io/losttacoma/browse.html#502%20N%20YAKIMA%20AVE,%20TACOMA">502 N YAKIMA AVE, TACOMA</a></p>
