--- a/pages/ch.html
+++ b/pages/ch.html
@@ -56,9 +56,9 @@ permalink: /ch.html
     <div class="column left" style="background-color:#FFFFFF;">
       <h4><p><b>City Hall - Proposed</b></p></h4>
       <br>
-      <p>Status: Unbuilt</p> 
+      <strong>Status: Unbuilt</strong> 
       <br>
-      <em>February 1, 1937</em>
+      <p>February 1, 1937</p>
       <br>
       <br>
       <p>Address: <a href="https://aweymo.github.io/losttacoma/browse.html#1502-24%20BROADWAY%2C%20TACOMA">1502-24 BROADWAY, TACOMA</a></p>
