--- a/pages/crystal.html
+++ b/pages/crystal.html
@@ -56,9 +56,9 @@ permalink: /crystal.html
     <div class="column left" style="background-color:#FFFFFF;">
       <h4><p><b>Crystal Palace Public Market</b></p></h4>
       <br>
-      <p>Status: Demolished</p>
+      <strong>Status: Demolished</strong>
       <br>
-      <em>December 27, 1926</em>
+      <p>December 27, 1926</p>
       <br>
       <br>
       <p>Address: <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13%20MARKET%20ST%2C%20TACOMA">1101-13 MARKET ST, TACOMA</a></p>
