--- a/pages/defiance.html
+++ b/pages/defiance.html
@@ -56,9 +56,9 @@ permalink: /defiance.html
     <div class="column left" style="background-color:#FFFFFF;">
       <h4><p><b>Point Defiance Pavilion</b></p></h4>
       <br>
-      <p>Status: Demolished</p>
+      <strong>Status: Demolished</strong>
       <br>
-      <em>May 6, 1919- March 22, 1925</em>
+      <p>May 6, 1919- March 22, 1925</p>
       <br>
       <br>
       <p>Address: <a href="https://aweymo.github.io/losttacoma/browse.html#5912%20N%20WATERFRONT%20DR.%20TACOMA">5912 N WATERFRONT DR. TACOMA</a></p>
