--- a/pages/donnelly.html
+++ b/pages/donnelly.html
@@ -56,9 +56,9 @@ permalink: /donnelly.html
     <div class="column left" style="background-color:#FFFFFF;">
       <h4><p><b>Donnelly Site Hotel</b></p></h4>
       <br>
-      <p>Status: Unbuilt</p>
+      <strong>Status: Unbuilt</strong>
       <br>
-      <em>January 1, 1922</em>
+      <p>January 1, 1922</p>
       <br>
       <br>
       <p>Address: <a href="https://aweymo.github.io/losttacoma/browse.html#742-50%20PACIFIC%20AVE%2C%20TACOMA">742-50 PACIFIC AVE, TACOMA</a></p>
