--- a/pages/edison.html
+++ b/pages/edison.html
@@ -56,9 +56,9 @@ permalink: /edison.html
     <div class="column left" style="background-color:#FFFFFF;">
       <h4><p><b>Edison School Annex</b></p></h4>
       <br>
-      <p>Status: Demolished</p>
+      <strong>Status: Demolished</strong>
       <br>
-      <em>May 28, 1910</em>
+      <p>May 28, 1910</p>
       <br>
       <br>
       <p>Address: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt050">3102 S 59TH ST, TACOMA</a></p>
