--- a/pages/fireboat.html
+++ b/pages/fireboat.html
@@ -56,9 +56,9 @@ permalink: /fireboat.html
     <div class="column left" style="background-color:#FFFFFF;">
       <h4><p><b>Fireboat for the City of Tacoma</b></p></h4>
       <br>
-      <p>Status: Demolished</p>
+      <strong>Status: Demolished</strong>
       <br>
-      <em>November 19, 1928</em>
+      <p>November 19, 1928</p>
       <br>
       <br>
       <p>Address: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt051">302 E 11TH ST, TACOMA</a></p>
