--- a/pages/garage.html
+++ b/pages/garage.html
@@ -56,9 +56,9 @@ permalink: /garage.html
     <div class="column left" style="background-color:#FFFFFF;">
       <h4><p><b>Garage for Jail and Public Safety Building</b></p></h4>
       <br>
-      <p>Status: Demolished</p>
+      <strong>Status: Demolished</strong>
       <br>
-      <em>June 1, 1929</em>
+      <p>June 1, 1929</p>
       <br>
       <br>
       <p>Address: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt052">621 PACIFIC AVE, TACOMA</a></p>
