--- a/pages/comfort.html
+++ b/pages/comfort.html
@@ -56,9 +56,9 @@ permalink: /comfort.html
     <div class="column left" style="background-color:#FFFFFF;">
       <h4><p><b>Comfort Station for Women</b></p></h4>
       <br>
-      <p>Status: Unbuilt</p>
+      <strong>Status: Unbuilt</strong>
       <br>
-      <em>October 1, 1910</em>
+      <p>October 1, 1910</p>
       <br>
       <br>
       <p>Address: <a href="https://aweymo.github.io/losttacoma/browse.html#625%20COMMERCE%20ST%2C%20TACOMA">625 COMMERCE ST, TACOMA</a></p>
