--- a/pages/coolers.html
+++ b/pages/coolers.html
@@ -56,9 +56,9 @@ permalink: /coolers.html
     <div class="column left" style="background-color:#FFFFFF;">
       <h4><p><b>Carsten Packing Company Coolers and Shipping Office</b></p></h4>
       <br>
-      <p>Status: Demolished</p>
+      <strong>Status: Demolished</strong>
       <br>
-      <em>January 1, 1922</em>
+      <p>January 1, 1922</p>
       <br>
       <br>
       <p>Address: <a href="https://aweymo.github.io/losttacoma/browse.html#1623%20E%20J%20ST%2C%20TACOMA">1623 E J ST, TACOMA</a></p>
