--- a/pages/dupont.html
+++ b/pages/dupont.html
@@ -56,9 +56,9 @@ permalink: /dupont.html
     <div class="column left" style="background-color:#FFFFFF;">
       <h4><p><b>Dupont School Building Addition</b></p></h4>
       <br>
-      <p>Status: Demolished</p>
+      <strong>Status: Demolished</strong>
       <br>
-      <em>September 8, 1941</em>
+      <p>September 8, 1941</p>
       <br>
       <br>
       <p>Address: <a href="https://aweymo.github.io/losttacoma/browse.html#1%20BARKSDALE%20AVE%2C%20DUPONT">1 BARKSDALE AVE, DUPONT</a></p>
