--- a/pages/arlington.html
+++ b/pages/arlington.html
@@ -56,9 +56,9 @@ permalink: /arlington.html
     <div class="column left" style="background-color:#FFFFFF;">
       <h4><p><b>Arlington Elementary School Addition</b></p></h4>
       <br>
-    <p>Status: Unbuilt</p>
+    <strong>Status: Unbuilt</strong>
     <br>
-      <em>April 18, 1924</em>
+      <p>April 18, 1924</p>
       <br>
       <br>
       <p>Address: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt005">3002 S 72ND ST, TACOMA</a></p>
