--- a/pages/pork.html
+++ b/pages/pork.html
@@ -56,6 +56,8 @@ permalink: /pork.html
     <div class="column left" style="background-color:#FFFFFF;">
       <h4><p><b>Carsten Packing Company Pork House</b></p></h4>
       <br>
+      <strong>Status: Demolished</strong>
+      <br>
       <em>January 1, 1922</em>
       <br>
       <br>
