--- a/pages/lawrence.html
+++ b/pages/lawrence.html
@@ -72,9 +72,9 @@ permalink: /lawrence.html
         </p>
       </div>
     <div class="column right" style="background-color:#FFFFFF;">
-      <a href="https://aweymo.github.io/losttacoma/browse.html#1009-15 A ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_lawrence" alt="Lawrence Block Remodel" style="max-width:100%;"></a>
+      <a href="https://aweymo.github.io/losttacoma/browse.html#1009-15 A ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_lawrence" alt="Lawrence Block Interior" style="max-width:100%;"></a>
     <br>
-    <sub>Lawrence Block Remodel
+    <sub>Lawrence Block Interior
     <br>
     TPL Historic Building Files (BU-12730), c.a. 1934
     <br>
