--- a/pages/mission.html
+++ b/pages/mission.html
@@ -72,13 +72,11 @@ permalink: /mission.html
         </p>
       </div>
     <div class="column right" style="background-color:#FFFFFF;">
-      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt118"><img src="https://aweymo.github.io/losttacoma/objects/ ext_washington" alt="Washington Hardware Company Remodel" style="max-width:100%;"></a>
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt055"><img src="https://aweymo.github.io/losttacoma/objects/b_mission.jpeg" alt="Ad during the Victory Theater period" style="max-width:100%;"></a>
       <br>
-      <sub>Washington Hardware Company Remodel
+      <sub>Ad during the Victory Theater period
       <br>
-      TPL Historic Building Files (BU-10989)
-      <br>
-      Courtesy Northwest Room</sub>
+      The Tacoma Daily Ledger - December 21, 1930
     </div>
   </div>
   
