style test abattoir

--- a/pages/abattoir.html
+++ b/pages/abattoir.html
@@ -58,7 +58,8 @@ permalink: /abattoir.html
       <br>
       <strong>Status: Demolished</strong>
       <br>
-      <p>June 10, 1939</p>
+      <br>
+      <p>Created: June 10, 1939</p>
       <br>
       <p>Address: <a href="https://aweymo.github.io/losttacoma/browse.html#1623%20E%20J%20ST%2C%20TACOMA">1623 E J ST, TACOMA</a></p>
       <br>
