--- a/pages/ch.html
+++ b/pages/ch.html
@@ -58,9 +58,9 @@ permalink: /ch.html
       <br>
       <strong>Status: Unbuilt</strong> 
       <br>
-      <p>February 1, 1937</p>
+      <p>Created: February 1, 1937
       <br>
-      <p>Address: <a href="https://aweymo.github.io/losttacoma/browse.html#1502-24%20BROADWAY%2C%20TACOMA">1502-24 BROADWAY, TACOMA</a></p>
+      Address: <a href="https://aweymo.github.io/losttacoma/browse.html#1502-24%20BROADWAY%2C%20TACOMA">1502-24 BROADWAY, TACOMA</a></p>
       <br>
       <p>Eight technical drawings for a proposed but unbuilt City Hall building, created by George Ekvall on February, 1937. Public Utilities Commissioner Ira S. Davisson requested the plans but they were rejected by the City Council three months later.</p>
       <br>
