--- a/pages/dupont.html
+++ b/pages/dupont.html
@@ -58,9 +58,9 @@ permalink: /dupont.html
       <br>
       <strong>Status: Demolished</strong>
       <br>
-      <p>September 8, 1941</p>
+      <p>Created: September 8, 1941
       <br>
-      <p>Address: <a href="https://aweymo.github.io/losttacoma/browse.html#1%20BARKSDALE%20AVE%2C%20DUPONT">1 BARKSDALE AVE, DUPONT</a></p>
+      Address: <a href="https://aweymo.github.io/losttacoma/browse.html#1%20BARKSDALE%20AVE%2C%20DUPONT">1 BARKSDALE AVE, DUPONT</a></p>
       <br>
       <p>One of 32 technical drawings created for the Dupont School Building Addition, created by William Mallis on September 8, 1941. 
       <br> 
