--- a/pages/edison.html
+++ b/pages/edison.html
@@ -58,9 +58,9 @@ permalink: /edison.html
       <br>
       <strong>Status: Demolished</strong>
       <br>
-      <p>May 28, 1910</p>
+      <p>Created: May 28, 1910
       <br>
-      <p>Address: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt050">3102 S 59TH ST, TACOMA</a></p>
+     Address: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt050">3102 S 59TH ST, TACOMA</a></p>
       <br>
       <p>One of 14 technical drawings for the Edison School Annex, created by Frederick Henry Heath on March 28, 1910. 
       <br> 
