--- a/pages/fireboat.html
+++ b/pages/fireboat.html
@@ -58,9 +58,9 @@ permalink: /fireboat.html
       <br>
       <strong>Status: Demolished</strong>
       <br>
-      <p>November 19, 1928</p>
+      <p>Created: November 19, 1928
       <br>
-      <p>Address: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt051">302 E 11TH ST, TACOMA</a></p>
+      Address: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt051">302 E 11TH ST, TACOMA</a></p>
       <br>
       <p>One of 33 technical drawings created by Thomas Mck. Rowlands for the Coastline Shipbuilding Company on November 19, 1928. The design was most likely intended to be housed in the Fireboat Building, Engine Co. No. 16, which would open the following year.</p>
       <br>
