--- a/pages/garage.html
+++ b/pages/garage.html
@@ -58,9 +58,9 @@ permalink: /garage.html
       <br>
       <strong>Status: Demolished</strong>
       <br>
-      <p>June 1, 1929</p>
+      <p>Created: June 1, 1929
       <br>
-      <p>Address: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt052">621 PACIFIC AVE, TACOMA</a></p>
+      Address: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt052">621 PACIFIC AVE, TACOMA</a></p>
       <br>
       <p>One of 10 technical drawings created by Harry E. Flickinger on July 1929 for the City of Tacoma. The jail was an addition to the south wing of the City Hall Annex. The structure was eventually demolished in April 1974.</p>
       <br>
