--- a/pages/abattoir.html
+++ b/pages/abattoir.html
@@ -58,10 +58,9 @@ permalink: /abattoir.html
       <br>
       <strong>Status: Demolished</strong>
       <br>
+      <p>Created: June 10, 1939
       <br>
-      <p>Created: June 10, 1939</p>
-      <br>
-      <p>Address: <a href="https://aweymo.github.io/losttacoma/browse.html#1623%20E%20J%20ST%2C%20TACOMA">1623 E J ST, TACOMA</a></p>
+     Address: <a href="https://aweymo.github.io/losttacoma/browse.html#1623%20E%20J%20ST%2C%20TACOMA">1623 E J ST, TACOMA</a></p>
       <br>
       <p>Series of 21 technical drawings for the Carsten Packing Company created by the Henschien, Everds & Crombie Architects & Engineers firm on June 10, 1939. The company was based in Chicago, Illinois at 59 East Van Buren St. and they specialized in meat processing plants. </p>
       <br>
