--- a/pages/apartment.html
+++ b/pages/apartment.html
@@ -58,9 +58,9 @@ permalink: /apartment.html
     <br>
     <p><strong>Status: Unbuilt</strong></p>
     <br>
-    <p>April 30, 1931</p>
+    <p>Created: April 30, 1931
     <br>
-    <p>Address: <a href="https://aweymo.github.io/losttacoma/browse.html#502%20N%20YAKIMA%20AVE,%20TACOMA">502 N YAKIMA AVE, TACOMA</a></p>
+    Address: <a href="https://aweymo.github.io/losttacoma/browse.html#502%20N%20YAKIMA%20AVE,%20TACOMA">502 N YAKIMA AVE, TACOMA</a></p>
     <br>
     John Buffelen was born in the Netherlands in 1862 and came first to Milwaukie and then to Tacoma while working in the lumber industry. Buffelen became a central figure in industrial lumber manufacturing in Tacoma's tide flats area, with his corporations the Buffelen Lumber & Manufacturing Co., the Buffelen-Hubert Furniture Co. and the American Wood Pipe Co. in addition to constructing several apartment buildings in the city. Buffelen attracted press later in life from funding multiple failed attempts to cross the Pacific by plane. 
     <br>
