--- a/pages/arlington.html
+++ b/pages/arlington.html
@@ -58,9 +58,9 @@ permalink: /arlington.html
       <br>
     <strong>Status: Unbuilt</strong>
     <br>
-      <p>April 18, 1924</p>
+      <p>Created: April 18, 1924
       <br>
-      <p>Address: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt005">3002 S 72ND ST, TACOMA</a></p>
+      Address: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt005">3002 S 72ND ST, TACOMA</a></p>
       <br>
       <p>One of 32 technical drawings created for this property by Hill Mock & Griffin on April 18, 1924. These records appear to be rejected plans for the school during the bidding process.</p>
       <br>
