--- a/pages/crystal.html
+++ b/pages/crystal.html
@@ -58,9 +58,9 @@ permalink: /crystal.html
       <br>
       <strong>Status: Demolished</strong>
       <br>
-      <p>December 27, 1926</p>
+      <p>Created: December 27, 1926
       <br>
-      <p>Address: <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13%20MARKET%20ST%2C%20TACOMA">1101-13 MARKET ST, TACOMA</a></p>
+      Address: <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13%20MARKET%20ST%2C%20TACOMA">1101-13 MARKET ST, TACOMA</a></p>
       <br>
       <p>Eight technical drawings for the Crystal Palace Public Market created by A.H. Albertson on December 27, 1926. 
       <br>  
