--- a/pages/hawthorne.html
+++ b/pages/hawthorne.html
@@ -58,9 +58,9 @@ permalink: /hawthorne.html
       <br>
       <strong>Status: Demolished</strong>
       <br>
-      <p>May 14, 1913</p>
+      <p>Created: May 14, 1913
       <br>
-      <p>Address: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt053">519 E 28TH ST, TACOMA</a></p>
+     Address: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt053">519 E 28TH ST, TACOMA</a></p>
       <br>
       <p>One of 11 technical drawings created by George Gove and Frederick Henry Heath on May 14, 1913. The school closed in 1963 and was turned over to the Puyallup Tribal Council before being demolished as a fire hazard in 1981.</p>
       <br>
