--- a/pages/lawrence.html
+++ b/pages/lawrence.html
@@ -58,10 +58,9 @@ permalink: /lawrence.html
       <br>
       <strong>Status: Demolished</strong>
       <br>
-      <p>June 21, 1926</p>
+      <p>Created: June 21, 1926
       <br>
-      <br>
-      <p>Address: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt054">1009-15 A ST, TACOMA</a></p>
+      Address: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt054">1009-15 A ST, TACOMA</a></p>
       <br>
       <p>One of 24 technical drawings created by Earl N. Dugan, Albert Sutton and Harrison Allen Whitney for a 1926 remodel and expansion on the structure, which had been extant since 1892. The Lawrence Block was demolished in 1956 to for the construction of a 12 story Weyerhaeuser building.</p>
       <br>
