--- a/pages/crystal.html
+++ b/pages/crystal.html
@@ -76,7 +76,7 @@ permalink: /crystal.html
     TPL Historic Building Files (BU-12230)
     <br>  
     Courtesy Tacoma Public Library Northwest Room</sub>
-    </div>
+     </div>
     <div class="column left" style="background-color:#FFFFFF;">
       <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_crystal_palace_02" alt="Crystal Palace Public Market" style="max-width:100%;"></a>
       <br>
@@ -106,10 +106,9 @@ permalink: /crystal.html
         <br>
         <a href="https://aweymo.github.io/losttacoma/item.html?id=lt047">Sheet 8</a> 
         <br> 
-        <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_crystal_palace_02" alt="Crystal Palace Public Market" style="max-width:100%;"></a>
+        <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_crystal_palace_02" alt="Crystal Palace Public Market" style="max-width:100%;"></a></p>
     </div>
   </div>
-</div>
   
 </body>
 </html>
