--- a/pages/mottau.html
+++ b/pages/mottau.html
@@ -74,9 +74,11 @@ permalink: /mottau.html
     <div class="column right" style="background-color:#FFFFFF;">
       <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 MARTIN LUTHER KING JR WAY, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_mottau" alt="Mottau Building" style="max-width:100%;"></a>
     <br>
-    <sub>Mottau Building, Historic Property Inventory Forms (BU-3659), 06-30-1993
+    <sub>Mottau Building, 
+    <br>   
+    Historic Property Inventory Forms (BU-3659), 06-30-1993
     <br>  
-    Courtesy Northwest Room</sub>
+    Courtesy Tacoma Public Library Northwest Room</sub>
     </div>
   </div>
   
