--- a/pages/crystal.html
+++ b/pages/crystal.html
@@ -63,19 +63,17 @@ permalink: /crystal.html
       Address: <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13%20MARKET%20ST%2C%20TACOMA">1101-13 MARKET ST, TACOMA</a></p>
       <br>
       <p>Eight technical drawings for the Crystal Palace Public Market created by A.H. Albertson on December 27, 1926. 
-      <br>  
-      <br> 
       The market opened in June of 1927 and was managed by Arthur E. Goodwin of Pike's Place Market in Seattle. The structure was closed in the late 1960s and demolished in 1973.</p>
       <br>
-      </div>
+     </div>
     <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_crystal_palace_01" alt="Crystal Palace Public Market" style="max-width:100%;"></a>
-    <br>
-    <sub>Crystal Palace Public Market
-    <br> 
-    TPL Historic Building Files (BU-12230)
-    <br>  
-    Courtesy Tacoma Public Library Northwest Room</sub>
+      <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_crystal_palace_01" alt="Crystal Palace Public Market" style="max-width:100%;"></a>
+      <br>
+      <sub>Crystal Palace Public Market
+      <br> 
+      TPL Historic Building Files (BU-12230)
+      <br>  
+      Courtesy Tacoma Public Library Northwest Room</sub>
      </div>
     <div class="column left" style="background-color:#FFFFFF;">
       <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_crystal_palace_02" alt="Crystal Palace Public Market" style="max-width:100%;"></a>
@@ -102,11 +100,7 @@ permalink: /crystal.html
         <br>
         <a href="https://aweymo.github.io/losttacoma/item.html?id=lt045">Sheet 6</a> 
         <br>
-        <a href="https://aweymo.github.io/losttacoma/item.html?id=lt046">Sheet 7</a> 
-        <br>
-        <a href="https://aweymo.github.io/losttacoma/item.html?id=lt047">Sheet 8</a> 
-        <br> 
-        <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_crystal_palace_02" alt="Crystal Palace Public Market" style="max-width:100%;"></a></p>
+        <a href="https://aweymo.github.io/losttacoma/item.html?id=lt046">Sheet 7</a> </p>
     </div>
   </div>
   
