--- a/pages/mock.html
+++ b/pages/mock.html
@@ -89,14 +89,18 @@ permalink: /mock.html
   <div class="column left" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt099"><img src="https://aweymo.github.io/losttacoma/objects/ ext_roosevelt" alt="Roosevelt School" style="max-width:100%;"></a>
     <br>
-    <sub>Roosevelt School, Marvin D. Boland Collection (BOLAND-B17893), 12-01-1928
+    <sub>Roosevelt School 
+    <br>  
+    Marvin D. Boland Collection (BOLAND-B17893), 12-01-1928
     <br>  
     Courtesy Northwest Room</sub>
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt005"><img src="https://aweymo.github.io/losttacoma/objects/ ext_arlington" alt="Arlington Elementary School Addition" style="max-width:100%;"></a>
     <br>
-    <sub>Arlington Elementary School Addition, TPL Historic Building Files (BU-11303), 12-11-1926
+    <sub>Arlington Elementary School Addition
+    <br> 
+    TPL Historic Building Files (BU-11303), 12-11-1926
     <br>  
     Courtesy Northwest Room</sub>
   </div>
@@ -106,14 +110,18 @@ permalink: /mock.html
     <div class="column left" style="background-color:#FFFFFF;">
       <a href="https://aweymo.github.io/losttacoma/browse.html#901 S 4TH ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_talmud_01" alt="Talmud Torah Synagogue" style="max-width:100%;"></a>
       <br>
-      <sub>Talmud Torah Synagogue, Richards Studio (D141770-15), 05-28-1964
+      <sub>Talmud Torah Synagogue
+      <br>
+      Richards Studio (D141770-15), 05-28-1964
       <br>  
       Courtesy Northwest Room</sub>
     </div>
     <div class="column right" style="background-color:#FFFFFF;">
       <a href="https://aweymo.github.io/losttacoma/browse.html#901 S 4TH ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_talmud_02" alt="Talmud Torah Synagogue" style="max-width:100%;"></a>
       <br>
-      <sub>Talmud Torah Synagogue, Marvin D. Boland Collection (BOLAND-B18322), 04-08-1928
+      <sub>Talmud Torah Synagogue
+      <br>
+      Marvin D. Boland Collection (BOLAND-B18322), 04-08-1928
       <br>  
       Courtesy Northwest Room</sub>
     </div>
